fixed long username overflow

--- a/app/assets/stylesheets/nav_bar/nav-bar-base.scss
+++ b/app/assets/stylesheets/nav_bar/nav-bar-base.scss
@@ -136,6 +136,13 @@
         align-items: center;
         min-width: 150px;
         height: 100%;
+        overflow: hidden;
+
+        h3 {
+          max-height: 50px;
+          white-space: nowrap;
+          margin-left: 5px;
+        }
 
         img {
           height: 30px;
