--- a/app/assets/stylesheets/tracks/track-show-contents.scss
+++ b/app/assets/stylesheets/tracks/track-show-contents.scss
@@ -46,6 +46,8 @@
       margin-top: 10px;
       font-size: 13px;
       font-weight: 300;
+      text-align: center;
+      overflow: hidden;
     }
   }
 
